Fix grid spacings

--- a/src/scss/modules/_banner-w-carousel.scss
+++ b/src/scss/modules/_banner-w-carousel.scss
@@ -7,8 +7,16 @@
   aspect-ratio: 480/500;
 
   @include screen-sm {
-    padding-top: $lg;
+    padding-top: $md;
     aspect-ratio: 1540/440;
+  }
+
+  @include screen-md {
+    aspect-ratio: 1540/410;
+  }
+
+  @include screen-lg {
+    aspect-ratio: 1540/380;
   }
 
   background-image: url("../img/images/img-banner-stars-bg.svg");
