--- a/src/scss/modules/_carousel-landing-seo.scss
+++ b/src/scss/modules/_carousel-landing-seo.scss
@@ -6,7 +6,7 @@
 	// @extend %margin_horizontal_main;
 	@extend %padding_horizontal_main;
 	margin-top: $lg;
-	margin-bottom: $lg;
+	// margin-bottom: $lg;
 
 	&__title {
 		margin-bottom: $md;
